# mtsync

./: .gitignore  2lazy.yml  LICENSE.md  README.md  pyproject.toml
examples/: example_input.json
mtsync/: action.py  cli.py  connection.py  constants.py  helpers.py  imagined.py  settings.py  synchronizer.py
tests/: imagined_test.py  synchronizer_test.py  test_mtsync.py
